# guardrail-eval

./: .gitignore  README.md  environment.yml  pyproject.toml
configs/benchmarks/: holisafe.yaml  mmbench.yaml  mmmu_pro.yaml  okvqa_erank.yaml  siuo.yaml  vlsbench.yaml
configs/models/: gemma_3_4b_it.yaml  gemma_3_4b_it_choice.yaml  gemma_3_4b_it_mcq.yaml  guardreasoner_vl_3b_choice.yaml  guardreasoner_vl_3b_mcq.yaml  guardreasoner_vl_7b.yaml  guardreasoner_vl_7b_choice.yaml  llama_guard_4.yaml  nemotron_cs.yaml  nemotron_cs_choice.yaml  nemotron_cs_mcq.yaml  omniguard_3b_choice.yaml  omniguard_3b_mcq.yaml  qwen2_5_omni_3b_choice.yaml  qwen2_5_omni_3b_mcq.yaml  qwen2_5_vl_3b_instruct_choice.yaml  qwen2_5_vl_3b_instruct_mcq.yaml  qwen2_5_vl_7b_instruct.yaml  qwen2_5_vl_7b_instruct_choice.yaml  safeqwen2_5_vl_7b.yaml  safeqwen2_5_vl_7b_choice.yaml
scripts/: check_permutation_bias.py  dump_mir_data.py  prepare_mir_data.sh  run_erank.py  run_eval.py  run_mir.py
src/guardrail_eval/: cli.py  erank.py  erank_backends.py  erank_cli.py  evaluator.py  io.py  metrics.py  metrics_choice.py  metrics_mcq.py  mir.py  mir_backends.py  mir_cli.py  mir_data.py  types.py
tests/: test_benchmark_config.py  test_choice_backend.py  test_cli.py  test_erank.py  test_evaluator.py  test_evaluator_smoke.py  test_gemma_3_it.py  test_llama_guard_backend.py  test_mcq_evaluator.py  test_mcq_metrics.py  test_metrics.py  test_mir.py  test_mmbench.py  test_mmmu_pro.py  test_model_config.py  test_nemotron_backend.py  test_parsers.py  test_permutation_bias.py  test_transformers_common.py
(+30 files in other folders)
